--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Genshin Impact Team Randomizer</title>
+    <title>Genshin Impact Spiral Abyss Drafter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
